--- a/python-basics.ipynb
+++ b/python-basics.ipynb
@@ -1361,7 +1361,7 @@
         "id": "vILSmFAXcMLE"
       },
       "source": [
-        "##\tPutting things together (3 minutes)\n",
+        "##\tPutting things together\n",
         "\n",
         "In this section, we will build an interface which collects the demographic information of a person. First read the code and try to understand.\n"
       ]
